--- a/assets/index.scss
+++ b/assets/index.scss
@@ -2,15 +2,15 @@
 @import "mixins";
 @import "home.scss";
 
-.thailand {
-  font-family: 'Mali', cursive;
-}
-
-.american {
-  font-family: 'Quicksand', sans-serif;
-}
-
 html {
+  &[lang="en-US"] {
+    font-family: 'Quicksand', sans-serif;
+  }
+
+  &[lang="th"] {
+    font-family: 'Kanit', sans-serif;
+  }
+
   font-size: 16px;
   font-weight: $normal;
 }
